Bug 116397 - GTK3: tooltip is not displayed
Summary: GTK3: tooltip is not displayed
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.2 all versions
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.1.0 target:6.0.3
Keywords:
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2018-03-14 09:59 UTC by Xisco Faulí
Modified: 2018-03-15 15:59 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (91.31 KB, image/png)
2018-03-14 09:59 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-03-14 09:59:35 UTC
Created attachment 140630 [details]
screenshot

Steps to reproduce:
1. Open attachment 140626 [details] from bug 116394
2. Put cursor over the field

-> Nothing happens. Tooltip should be displayed instead, as in GTK or GEN. See attached image

Reproduced in

Version: 6.1.0.0.alpha0+
Build ID: 6d20aeeda8a346ac10782d44214a89878fd00c40
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 1 Caolán McNamara 2018-03-14 14:37:15 UTC
These tend to be because the area the tooltip is indicated for is of 1 pixel width rather than describing the full rectangle the tooltip is for
Comment 2 Commit Notification 2018-03-14 20:43:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=14ca8f178f2ee713de5fc9a0c9579f49e52099f0

tdf#116397 get bounds of full field, not start of char inside field

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Caolán McNamara 2018-03-15 14:43:44 UTC
that should fix it
Comment 4 Xisco Faulí 2018-03-15 14:51:54 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: 28e8c3e28bf4944ecad23961602b9b1f72613d39
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: he-IL (ca_ES.UTF-8); Calc: group
Comment 5 Commit Notification 2018-03-15 15:59:28 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=31ea1ebe851eff9257c7fa4acc1e04aa1c9fd32f&h=libreoffice-6-0

tdf#116397 get bounds of full field, not start of char inside field

It will be available in 6.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.