tdf#116397 get bounds of full field, not start of char inside field

The pSpecialPos is set for the StartTag case (#i75130#) and I surmise
we only care about it if we are a smarttag

Change-Id: Ic764bbf31a7784ab021f306f74a08473c8dd0a77